<resources>
    <string name="app_name">Outdoor Classroom</string>
    <string name="test_name">TestingOne</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_text">Click Here</string>
    <string name="google_maps_key">AIzaSyCryijmuDA-PEjZNOobUK4glZda2wyNFzY</string>
    <string name="map_click">MAP OF MANLY WALKS</string>
    <string name="browser_click">Browser</string>
    <string name="database">More Info</string>
    <string name="default_title">Default</string>
    <string name="img_desc">Image of landmark</string>
    <string name="rb_normal">Normal</string>
    <string name="rb_satellite">Satellite</string>
    <string name="rb_terrain">Terrain</string>

    <!--About Us-->
    <string name="about">About the Developers</string>
    <string-array name="details">
        <item>Developed by:</item>
        <item>Macquarie University</item>
        <item>ISYS358 S1 2017</item>
        <item><b>Group 16</b></item>
    </string-array>
    <string-array name="developers">
        <item>Allan Dominguez</item>
        <item>Hugo de Vries</item>
        <item>Go Uragami</item>
        <item>Hao Ye</item>
        <item>Jackson Cheung</item>
        <item>Jiaqin Cai</item>
    </string-array>

    <!--Titles-->
    <string name="map_activity">Manly Map</string>
    <string name="info_activity">Landmark Info</string>
    <string name="help_activity">Help</string>

    <!--PERMISSIONS-->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_walk_list">Walks</string>
    <string name="title_walk_detail">Walk Detail</string>
</resources>
