<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_maps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context="com.outdoorclassroom.MapsActivity"
        android:layout_weight=".99"/>

    <RadioGroup
        android:id="@+id/rg_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:layout_weight=".01">

        <RadioButton
            android:id="@+id/rb_norm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_normal"
            android:checked="true"
            android:layout_margin="5dp"/>

        <RadioButton
            android:id="@+id/rb_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_satellite"
            android:layout_margin="5dp"/>

        <RadioButton
            android:id="@+id/rb_terr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_terrain"
            android:layout_margin="5dp"/>

    </RadioGroup>

</LinearLayout>
