<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.outdoorclassroom.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".66"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/map_click"
            android:onClick="onClick"
            android:clickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bottomLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/browser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/browser_click"
                android:onClick="onClick"
                android:clickable="true"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/database"
                android:onClick="onClick"
                android:clickable="true"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
